log
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:89:62: error: expected ‘;’ before ‘{’ token
   89 |         if (is_equal(tree, key, current->pair->key) == 1)NULL{
      |                                                              ^
Compilation failed
43966ae
 tests:  8|7
total_score: 5/70
43966ae
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:99:5: error: implicit declaration of function ‘print’; did you mean ‘printf’? [-Werror=implicit-function-declaration]
   99 |     print(result->value);
      |     ^~~~~
      |     printf
cc1: all warnings being treated as errors
Compilation failed
43966ae
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:99:14: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
   99 |     printf("%d", result->value);
      |             ~^   ~~~~~~~~~~~~~
      |              |         |
      |              int       void *
      |             %p
cc1: all warnings being treated as errors
Compilation failed
43966ae
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:99:9: error: ‘value’ undeclared (first use in this function)
   99 |     if (value != NULL) printf("%i", *((int *)result->value));
      |         ^~~~~
treemap.c:99:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9cef852
 tests:  11|6
total_score: 15/70
ae81ebe
 tests:  0|0
ae81ebe
 tests:  0|0
51ee9ba
vie 21 abr 2023 09:00:52 -04: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
965d43c
 tests:  13|5
total_score: 25/70
965d43c
 tests:  15|4
total_score: 25/70
965d43c
 tests:  17|4
total_score: 35/70
965d43c
 tests:  18|3
total_score: 40/70
79c0424
 tests:  20|2
total_score: 45/70
79c0424
 tests:  20|2
total_score: 45/70
79c0424
vie 21 abr 2023 17:17:59 -04: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:195:24: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  195 |             return tree->current;
      |                    ~~~~^~~~~~~~~
treemap.c:201:16: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  201 |     return tree->current;
      |            ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
79c0424
 tests:  19|3
total_score: 40/70
79c0424
 tests:  21|2
total_score: 50/70
79c0424
 tests:  21|2
total_score: 50/70
79c0424
